# zoth

./: Cargo.toml  README.md  build.rs
proto/: zothcore.proto
src/: cache.rs  cli.rs  main.rs  server.rs  zothcl.rs  zothcore.rs  zothcore_grpc.rs  zothd.rs
