[package]
name = "zoth"
version = "0.1.0"
authors = ["Hideo Hattori <hhatto.jp@gmail.com>"]
build = "build.rs"
edition = "2021"

[dependencies]
clap = "2"
dirs = "2.0"
rust-crypto = "0.2"
grpcio = "0.1"
protobuf = "1.2"
futures = "0.1"
env_logger = "0.11"
log = "0.3"
chan = "0.1"
chan-signal = "0.3"

[build-dependencies]
which = "1.0"

[features]
default = []
genproto = []

[[bin]]
name = "zoth"
path = "src/main.rs"
